md data table + filter + search

--- a/app/views/products/productList.html
+++ b/app/views/products/productList.html
@@ -1,3 +1,4 @@
 <items-table list-items="productList" property-item="propertyList" on-delete="deleteProduct(item)" on-edit="showEdit(item)" title="Prodotti">
 
 </items-table>
+<!--<div ng-include="'app/component/itemsTable/tabletest.html'"></div>-->
